# r1_packages

r1_bringup/: CMakeLists.txt  package.xml
r1_bringup/launch/: microros.launch.py  r1_bringup.launch.py  sensors.launch.py
r1_description/: CMakeLists.txt  package.xml
r1_description/urdf/: r1_mini.xacro
r1_localization/: CMakeLists.txt  package.xml
r1_localization/config/: ekf.yaml
r1_localization/launch/: r1_localization.launch.py  r1_rsp.launch.py
r1_navigation/: CMakeLists.txt  package.xml
r1_navigation/config/: nav2_default.rviz  nav2_params.yaml
r1_navigation/launch/: r1_navigation.launch.py
r1_navigation/maps/: camras_area.pgm  camras_area.yaml  cps_room.pgm  cps_room.yaml  lobby.pgm  map11.pgm  map11.yaml  (+4 more)
r1_slam/: CMakeLists.txt  package.xml
r1_teleop/: CMakeLists.txt  package.xml
r1launch/: package.xml  setup.cfg  setup.py
r1launch/config/: aeroat.pgm  aeroat.yaml  atria.pgm  atria.yaml  camrasfloor1.pgm  camrasfloor1.yaml  corr.pgm  corr.yaml  cps.pgm  cps.yaml  cps_f1_full.pgm  cps_f1_full.yaml  grf.pgm  grf.yaml  jan11map.pgm  jan11map.yaml  lobby.yaml  m101mapjan12.pgm  m101mapjan12.yaml  mapf.pgm  mapf.yaml  mapoffice.pgm  mapoffice.yaml  mcap.pgm  mcap.yaml  mo.pgm  mo.yaml  moca.pgm  moca.yaml  nav2_params (copy).yaml  nav2_params.yaml  nav2_params_1.yaml  r1mini.rviz  r1mini_1.rviz  slam.yaml  space.pgm  space.yaml
r1launch/launch/: imu_tf_launch.py  li_launch.py  lidar_ekf_launch.py  loadmap_launch.py  mapping_launch.py  microros_launch.py  navigation_launch.py  rtabmap_launch.py  stereo_argument  stereo_localization_launch.py
(+8 files in other folders)
