<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r1launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="airlorin6@todo.todo">airlorin6</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>micro_ros_agent</depend>
  <depend>imu_bno055</depend>
  <depend>rplidar_ros</depend>
  <depend>robot_localization</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_viz</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>realsense2_camera</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
